Tidy up data memebers of FrameView and related classes to shrink class sizes https://bugs.webkit.org/show_bug.cgi?id=194197

Reviewed by Zalan Bujtas.

Source/WebCore:

Make various enums 8-bit. Re-order data members of FrameView, FrameViewLayoutContext, Widget
and ScrollView to optimize padding.

Use more data member initializers.

This shrinks FrameView from 1168 (144 padding bytes) to 1096 (96 padding bytes).

* dom/Element.h:
* page/FrameView.cpp:
(WebCore::FrameView::FrameView):
* page/FrameView.h:
* page/FrameViewLayoutContext.h:
* platform/ScrollTypes.h:
* platform/ScrollView.h: Data members should come after member functions.
* platform/Widget.h:
* rendering/Pagination.h:
(WebCore::Pagination::Pagination): Deleted.

Source/WebKit:

* UIProcess/PageClient.h: Declare enum size.


Canonical link: https://commits.webkit.org/208666@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@240901 268f45cc-cd09-0410-ab3c-d52691b4dbfc