Source/WebCore/page/FrameViewLayoutContext.h
@@ -64,7 +64,7 @@ public:
     void disableSetNeedsLayout();
     void enableSetNeedsLayout();
 
-    enum class LayoutPhase {
+    enum class LayoutPhase : uint8_t {
         OutsideLayout,
         InPreLayout,
         InRenderTreeLayout,
@@ -158,6 +158,7 @@ private:
     FrameView& m_frameView;
     Timer m_layoutTimer;
     Timer m_asynchronousTasksTimer;
+    WeakPtr<RenderElement> m_subtreeLayoutRoot;
 
     bool m_layoutSchedulingIsEnabled { true };
     bool m_delayedLayout { false };
@@ -166,14 +167,13 @@ private:
     bool m_inAsynchronousTasks { false };
     bool m_setNeedsLayoutWasDeferred { false };
     LayoutPhase m_layoutPhase { LayoutPhase::OutsideLayout };
-    enum class LayoutNestedState { NotInLayout, NotNested, Nested };
+    enum class LayoutNestedState : uint8_t  { NotInLayout, NotNested, Nested };
     LayoutNestedState m_layoutNestedState { LayoutNestedState::NotInLayout };
     unsigned m_layoutCount { 0 };
     unsigned m_disableSetNeedsLayoutCount { 0 };
     int m_layoutDisallowedCount { 0 };
-    WeakPtr<RenderElement> m_subtreeLayoutRoot;
-    LayoutStateStack m_layoutStateStack;
     unsigned m_paintOffsetCacheDisableCount { 0 };
+    LayoutStateStack m_layoutStateStack;
 };
 
 } // namespace WebCore
