Source/WebCore/platform/ScrollView.h
@@ -427,6 +427,14 @@ protected:
     virtual void unobscuredContentSizeChanged() = 0;
 #endif
 
+#if PLATFORM(COCOA) && defined __OBJC__
+public:
+    WEBCORE_EXPORT NSView* documentView() const;
+
+private:
+    NSScrollView<WebCoreFrameScrollView>* scrollView() const;
+#endif
+
 private:
     // Size available for view contents, excluding content insets. Not affected by zooming.
     IntSize sizeForUnobscuredContent(VisibleContentRectIncludesScrollbars = ExcludeScrollbars) const;
@@ -439,54 +447,6 @@ private:
     bool setHasScrollbarInternal(RefPtr<Scrollbar>&, ScrollbarOrientation, bool hasBar, bool* contentSizeAffected);
 
     bool isScrollView() const final { return true; }
-
-    HashSet<Ref<Widget>> m_children;
-
-    RefPtr<Scrollbar> m_horizontalScrollbar;
-    RefPtr<Scrollbar> m_verticalScrollbar;
-    ScrollbarMode m_horizontalScrollbarMode { ScrollbarAuto };
-    ScrollbarMode m_verticalScrollbarMode { ScrollbarAuto };
-
-#if PLATFORM(IOS_FAMILY)
-    // FIXME: exposedContentRect is a very similar concept to fixedVisibleContentRect except it does not differentiate
-    // between exposed and unobscured areas. The two attributes should eventually be merged.
-    FloatRect m_exposedContentRect;
-    FloatSize m_unobscuredContentSize;
-    // This is only used for history scroll position restoration.
-#else
-    IntRect m_fixedVisibleContentRect;
-#endif
-    ScrollPosition m_scrollPosition;
-    IntPoint m_cachedScrollPosition;
-    IntSize m_fixedLayoutSize;
-    IntSize m_contentsSize;
-
-    Optional<IntSize> m_deferredScrollDelta; // Needed for WebKit scrolling
-    Optional<std::pair<ScrollOffset, ScrollOffset>> m_deferredScrollOffsets; // Needed for platform widget scrolling
-
-    IntPoint m_panScrollIconPoint;
-
-    bool m_horizontalScrollbarLock { false };
-    bool m_verticalScrollbarLock { false };
-
-    bool m_prohibitsScrolling { false };
-    bool m_allowsUnclampedScrollPosition { false };
-
-    // This bool is unused on Mac OS because we directly ask the platform widget
-    // whether it is safe to blit on scroll.
-    bool m_canBlitOnScroll { true };
-
-    bool m_scrollbarsSuppressed { false };
-
-    bool m_inUpdateScrollbars { false };
-    unsigned m_updateScrollbarsPass { 0 };
-
-    bool m_drawPanScrollIcon { false };
-    bool m_useFixedLayout { false };
-
-    bool m_paintsEntireContents { false };
-    bool m_delegatesScrolling { false };
-
 
     void init();
     void destroy();
@@ -516,19 +476,57 @@ private:
     void platformRepaintContentRectangle(const IntRect&);
     bool platformIsOffscreen() const;
     void platformSetScrollbarOverlayStyle(ScrollbarOverlayStyle);
-   
     void platformSetScrollOrigin(const IntPoint&, bool updatePositionAtAll, bool updatePositionSynchronously);
 
     void calculateOverhangAreasForPainting(IntRect& horizontalOverhangRect, IntRect& verticalOverhangRect);
     void updateOverhangAreas();
 
-#if PLATFORM(COCOA) && defined __OBJC__
-public:
-    WEBCORE_EXPORT NSView* documentView() const;
+    HashSet<Ref<Widget>> m_children;
 
-private:
-    NSScrollView<WebCoreFrameScrollView>* scrollView() const;
+    RefPtr<Scrollbar> m_horizontalScrollbar;
+    RefPtr<Scrollbar> m_verticalScrollbar;
+    ScrollbarMode m_horizontalScrollbarMode { ScrollbarAuto };
+    ScrollbarMode m_verticalScrollbarMode { ScrollbarAuto };
+
+#if PLATFORM(IOS_FAMILY)
+    // FIXME: exposedContentRect is a very similar concept to fixedVisibleContentRect except it does not differentiate
+    // between exposed and unobscured areas. The two attributes should eventually be merged.
+    FloatRect m_exposedContentRect;
+    FloatSize m_unobscuredContentSize;
+    // This is only used for history scroll position restoration.
+#else
+    IntRect m_fixedVisibleContentRect;
 #endif
+    ScrollPosition m_scrollPosition;
+    IntPoint m_cachedScrollPosition;
+    IntSize m_fixedLayoutSize;
+    IntSize m_contentsSize;
+
+    Optional<IntSize> m_deferredScrollDelta; // Needed for WebKit scrolling
+    Optional<std::pair<ScrollOffset, ScrollOffset>> m_deferredScrollOffsets; // Needed for platform widget scrolling
+
+    IntPoint m_panScrollIconPoint;
+
+    unsigned m_updateScrollbarsPass { 0 };
+
+    bool m_horizontalScrollbarLock { false };
+    bool m_verticalScrollbarLock { false };
+
+    bool m_prohibitsScrolling { false };
+    bool m_allowsUnclampedScrollPosition { false };
+
+    // This bool is unused on Mac OS because we directly ask the platform widget
+    // whether it is safe to blit on scroll.
+    bool m_canBlitOnScroll { true };
+
+    bool m_scrollbarsSuppressed { false };
+    bool m_inUpdateScrollbars { false };
+
+    bool m_drawPanScrollIcon { false };
+    bool m_useFixedLayout { false };
+
+    bool m_paintsEntireContents { false };
+    bool m_delegatesScrolling { false };
 }; // class ScrollView
 
 } // namespace WebCore
