Source/WebCore/platform/Widget.h
@@ -205,14 +205,15 @@ private:
     static IntPoint convertFromContainingWindowToRoot(const Widget* rootWidget, const IntPoint&);
 
 private:
+    bool m_selfVisible { false };
+    bool m_parentVisible { false };
+
     WeakPtr<ScrollView> m_parent;
 #if !PLATFORM(COCOA)
     PlatformWidget m_widget;
 #else
     RetainPtr<NSView> m_widget;
 #endif
-    bool m_selfVisible;
-    bool m_parentVisible;
 
     IntRect m_frame; // Not used when a native widget exists.
 };
