Source/WebCore/rendering/Pagination.h
@@ -28,15 +28,9 @@
 namespace WebCore {
 
 struct Pagination {
-    enum Mode { Unpaginated, LeftToRightPaginated, RightToLeftPaginated, TopToBottomPaginated, BottomToTopPaginated };
+    enum Mode : uint8_t { Unpaginated, LeftToRightPaginated, RightToLeftPaginated, TopToBottomPaginated, BottomToTopPaginated };
 
-    Pagination()
-        : mode(Unpaginated)
-        , behavesLikeColumns(false)
-        , pageLength(0)
-        , gap(0)
-    {
-    };
+    Pagination() = default;
 
     bool operator==(const Pagination& other) const
     {
@@ -48,10 +42,10 @@ struct Pagination {
         return mode != other.mode || behavesLikeColumns != other.behavesLikeColumns || pageLength != other.pageLength || gap != other.gap;
     }
 
-    Mode mode;
-    bool behavesLikeColumns;
-    unsigned pageLength;
-    unsigned gap;
+    Mode mode { Unpaginated };
+    bool behavesLikeColumns { false };
+    unsigned pageLength { 0 };
+    unsigned gap { 0 };
 };
 
 } // namespace WebCore
